TODO LISTO. UP AND RUNNING, MONGO, GQL, TODO

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL= mongodb+srv://svrqdev_db_user:fd2flSVVgfGJ4jzY@c0.7lbutpo.mongodb.net/?appName=C0
+MONGO_URL= mongodb+srv://svrqdev_db_user:5I0KyKhql45HArfi@cluster0.jwywivo.mongodb.net/?appName=Cluster0
 SECRET=mySuperSecret
